# capsblock

./: .gitignore  CMakeLists.txt  LICENSE  README.md  sources.cmake  support.cmake
.github/workflows/: build.yml  release.yml
scripts/: .gitignore  install.bat  shutdown.bat  uninstall.bat
src/capsblock/: capsblock.rc  main.c
